--- a/about.html
+++ b/about.html
@@ -104,7 +104,7 @@ class="hfeed site" id="page">
 		<div class="site-branding">
 			<div
 			class="ast-site-identity" itemtype="https://schema.org/Organization" itemscope="itemscope"			>
-				<span class="site-logo-img"><a href="index.html" class="custom-logo-link" rel="home"><img width="333" height="64" src="images/logoproba4.png" class="custom-logo" alt="Natalia Stefaniak Fotografia" sizes="(max-width: 333px) 100vw, 333px" /></a></span>			</div>
+				<span class="site-logo-img"><a href="index.html" class="custom-logo-link" rel="home"><img width="333" height="64" src="images/nowelogotran.png" class="custom-logo" alt="Natalia Stefaniak Fotografia" sizes="(max-width: 333px) 100vw, 333px" /></a></span>			</div>
 		</div>
 
 		<!-- .site-branding -->
@@ -417,7 +417,7 @@ class="post-49 page type-page status-publish ast-article-single" id="post-49" it
 		<div class="ast-container">
 			<div class="ast-small-footer-wrap" >
 									<div class="ast-small-footer-section ast-small-footer-section-1" >
-						 © 2024 IZABELA KOT					</div>
+						 © 2025 IZABELA KOT					</div>
 				
 				
 			</div><!-- .ast-row .ast-small-footer-wrap -->
